--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Ir a Github</h1>
+    <h1 style="color: red;"><b><em>Ir a Github</em></b></h1>
     <a href="https://github.com/">
       <img src="./GitHub-logo-1.jpg" alt="octocat">
     </a>
